k8s/auth.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-auth-deployment
  labels:
    app: ms-auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-auth
  template:
    metadata:
      labels:
        app: ms-auth
    spec:
      containers:
        - name: ms-auth
          image: devder/ms-auth:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: ms-auth-service
spec:
  selector:
    app: ms-auth
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
