k8s/broker.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-broker-deployment
  labels:
    app: ms-broker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-broker
  template:
    metadata:
      labels:
        app: ms-broker
    spec:
      containers:
        - name: ms-broker
          image: devder/gopher_ms_broker:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: ms-broker-service
spec:
  selector:
    app: ms-broker
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
