k8s/fe.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-fe-deployment
  labels:
    app: ms-fe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-fe
  template:
    metadata:
      labels:
        app: ms-fe
    spec:
      containers:
        - name: ms-fe
          image: devder/ms-fe:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: ms-fe-service
spec:
  selector:
    app: ms-fe
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
