k8s/listener.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-listener-deployment
  labels:
    app: ms-listener
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-listener
  template:
    metadata:
      labels:
        app: ms-listener
    spec:
      containers:
        - name: ms-listener
          image: devder/gopher_ms_listener:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: ms-listener-service
spec:
  selector:
    app: ms-listener
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
