k8s/mail.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-mail-deployment
  labels:
    app: ms-mail
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-mail
  template:
    metadata:
      labels:
        app: ms-mail
    spec:
      containers:
        - name: ms-mail
          image: devder/gopher_ms_mail:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: ms-mail-service
spec:
  selector:
    app: ms-mail
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
