k8s/mongo.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-mongo-deployment
  labels:
    app: ms-mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-mongo
  template:
    metadata:
      labels:
        app: ms-mongo
    spec:
      containers:
        - name: ms-mongo
          image: mongo:4.0
          ports:
            - containerPort: 27017

---
apiVersion: v1
kind: Service
metadata:
  name: ms-mongo-service
spec:
  selector:
    app: ms-mongo
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
