k8s/rabbit.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-rabbit-deployment
  labels:
    app: ms-rabbit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-rabbit
  template:
    metadata:
      labels:
        app: ms-rabbit
    spec:
      containers:
        - name: ms-rabbit
          image: rabbitmq:4.0.5-alpine
          ports:
            - containerPort: 5672

---
apiVersion: v1
kind: Service
metadata:
  name: ms-rabbit-service
spec:
  selector:
    app: ms-rabbit
  ports:
    - protocol: TCP
      port: 5672
      targetPort: 5672
