k8s/ingress.yml
# use ingress to route traffic to the grpc service
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ms-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
    - host: fe-srv.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ms-fe-service
                port:
                  number: 80
    - host: broker-srv.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ms-broker-service
                port:
                  number: 80
